--- a/content/index.html
+++ b/content/index.html
@@ -171,7 +171,8 @@ img.add_border {
 <h4>讀取各學員每週工作內容:</h4>
 <p style="padding-left: 30px;">當完成分組後, 且各學員已經透過各自 Github 帳號下的 cd2022 倉儲開始執行課程任務後, 能否透過程式逐日或逐週讀取各學員的工作內容?</p>
 <h4>課程第一階段要求:</h4>
-<p style="padding-left: 30px;">每一個大組都要設法提供 solvespace, NX1980 格式的 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">uarm</a> (Onshape 格式) 機械手臂零組件.</p>
+<p style="padding-left: 30px;">每一個大組都要設法提供 solvespace, NX1980 格式的 <a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">uarm</a> (Onshape 格式) 機械手臂零組件.</p>
+<p style="padding-left: 30px;"><a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <div id="disqus_thread"></div>
 <p>
 <script>
