--- a/content/w7 任務.html
+++ b/content/w7 任務.html
@@ -140,7 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w6 任務 << <a href='w6 任務.html'>Previous</a> <a href='w7_summary.html'>Next</a> >> w7_summary<br /><h1>w7 任務</h1>
-<p>為了讓各組設計中的 uArm 機械手臂能夠透過 Pick and Place 控制流程參與 <a href="https://mde.tw/cd2022_guide/content/Tic-Tat-Toe.html">Tic-Tat-Toe 遊戲</a>, 本週將進行下列實習任務:</p>
+<p>為了讓各組設計中的 uArm 機械手臂 (<a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a>) 能夠透過 Pick and Place 控制流程參與 <a href="https://mde.tw/cd2022_guide/content/Tic-Tat-Toe.html">Tic-Tat-Toe 遊戲</a>, 本週將進行下列實習任務:</p>
 <p>請利用隨身程式系統編譯 <a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a> 中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中 <a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a> 所進行的 <a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a>.</p>
 <h4>設法以隨身程式系統編譯此程式碼:</h4>
 <ol>
