--- a/content/NX12.html
+++ b/content/NX12.html
@@ -146,6 +146,7 @@ img.add_border {
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref</a></p>
 <p style="padding-left: 30px;">利用 <a href="https://github.com/cjrh/easycython">https://github.com/cjrh/easycython</a> 將 .pyx 轉為 .pyd 後, 由 .py 導入後執行, 可<a href="https://medium.datadriveninvestor.com/using-easy-cython-to-speed-up-python-in-just-a-few-steps-fbda8d0cdeff">提升</a> Python 程式的執行速度. (<a href="https://www.laitimes.com/article/374w8_3nuce.html">參考</a>)</p>
 <h4>References:</h4>
+<p style="padding-left: 30px;"><a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <p style="padding-left: 30px;"><a href="https://slideplayer.com/slide/11624773/">https://slideplayer.com/slide/11624773/</a></p>
 <p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MiiWWAS/nx-customization-and-programming">NX Customization and Programming Discussion</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf</a></p>
