--- a/content/w8 任務.html
+++ b/content/w8 任務.html
@@ -148,7 +148,12 @@ img.add_border {
 <li>E:\downloads\cop410\programming\simExtMTB&gt;qmake -o Makefile simExtMtb.pro</li>
 <li>E:\downloads\cop410\programming\simExtMTB&gt;mingw32-make -f Makefile.Release</li>
 <li>在 release 目錄中取得 simExtMtb.dll, 啟動前放入 Coppeliasim 根目錄.</li>
-</ol><br />w7_summary << <a href='w7_summary.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
+</ol>
+<p><a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">Onshape 中的 uArm 組立圖</a></p>
+<p><a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
+<p><img alt="" height="191" src="./../images/uarm_nx12.png" width="300"/></p>
+<p>uarm 末端連桿尺寸:</p>
+<p><img alt="" height="142" src="./../images/末端連桿.png" width="300"/></p><br />w7_summary << <a href='w7_summary.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
     <!-- footer -->
       <div class="container">
