完成 w8 任務指定

--- a/config/content.htm
+++ b/config/content.htm
@@ -426,6 +426,7 @@ c.recursiveImport(
 <h4>Reference:</h4>
 <p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a> </p>
 <p></p><h2>w8 任務</h2>
+<p>任務一: 請依照下列步驟編譯 simExtMtb plugin 專案:</p>
 <p><a href="/downloads/w7_project.7z">w7_project.7z</a></p>
 <p>編譯 <a href="https://github.com/CoppeliaRobotics/simExtMTB">simExtMtb</a> plugin:</p>
 <p>針對 simExtMtb.pro:</p>
@@ -435,6 +436,7 @@ c.recursiveImport(
 <li>E:\downloads\cop410\programming\simExtMTB&gt;mingw32-make -f Makefile.Release</li>
 <li>在 release 目錄中取得 simExtMtb.dll, 啟動前放入 Coppeliasim 根目錄.</li>
 </ol>
+<p>任務二: 請各組依照下列零件檔案, 將組員分為三組, 分別以 Solvespace, NX (12, 1980 或 2008) 及 Onshape, 完成各零件工程圖與組合圖後, 將 uarm 組合件轉為 STL 格式後轉入 CoppeliaSim, 並安排以 GUI Slider 方式控制前三軸作動. 各組員需將零組件繪製過程與 CoppeliaSim 操控流程及心得, 寫為 Pelican Blog 與 Reveal.js 簡報, 並在期中考週將個人與分組網誌與簡報流程透過 Wink 製作為 mp4 影片嵌入個人與分組網頁, 流程中的 cmsimde 頁面命名為 H1 midterm, 而網誌命名為 midterm.html, 簡報則採 index.html 命名.</p>
 <p><a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">Onshape 中的 uArm 組立圖</a></p>
 <p><a href="/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <p><img alt="" height="191" src="/images/uarm_nx12.png" width="300"/></p>
