將 w7 查驗網誌頁面結果放入 w7 頁面

--- a/config/content.htm
+++ b/config/content.htm
@@ -348,6 +348,8 @@ var winkVideoData2 = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div><h2>w7 任務</h2>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
 <p>為了讓各組設計中的 uArm 機械手臂 (<a href="/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a>) 能夠透過 Pick and Place 控制流程參與 <a href="https://mde.tw/cd2022_guide/content/Tic-Tat-Toe.html">Tic-Tat-Toe 遊戲</a>, 本週將進行下列實習任務:</p>
 <p>請利用隨身程式系統編譯 <a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a> 中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中 <a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a> 所進行的 <a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a>.</p>
 <h4>設法以隨身程式系統編譯此程式碼:</h4>
@@ -391,6 +393,8 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div><h3>w7_summary</h3>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
 <p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p>
 <h4>請各大組在摘要網誌中回答下列問題:</h4>
 <ol>
@@ -424,7 +428,7 @@ c.recursiveImport(
     theTypes =  ['.py']
 )</pre>
 <h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a></p>
 <p></p><h2>w8 任務</h2>
 <p>任務一: 請依照下列步驟編譯 simExtMtb plugin 專案:</p>
 <p><a href="/downloads/w7_project.7z">w7_project.7z</a></p>
@@ -1250,8 +1254,8 @@ doc["grp2a_2022"].bind("click", grp2a_2022.do)
 <h2>Brython</h2>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src2.py">2a 分組程式練習</a></p>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp_src2.py">2b 分組程式練習</a></p>
-<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/a79d474df5500b7487a352903b81989f9a0cd24f/w6_blog.py">2a w6 blog 查驗</a> (<a href="/downloads/w6_blog/2a_stage3.txt">2a 有網誌者</a>) | <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
-<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/c0e6d1f197434988c56451b2c25f7607c06a15d8/w6_blog_2b.py">2b w6 blog 查驗</a> (<a href="/downloads/w6_blog/2b_stage2.txt">2b 有網誌者</a>) | <a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/a79d474df5500b7487a352903b81989f9a0cd24f/w6_blog.py">2a w6 blog 查驗</a> (<a href="/downloads/w6_blog/2a_stage3.txt">2a 有網誌者</a>) | <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/c0e6d1f197434988c56451b2c25f7607c06a15d8/w6_blog_2b.py">2b w6 blog 查驗</a> (<a href="/downloads/w6_blog/2b_stage2.txt">2b 有網誌者</a>) | <a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
 <p>
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
