--- a/content/w7_summary.html
+++ b/content/w7_summary.html
@@ -140,6 +140,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w7 任務 << <a href='w7 任務.html'>Previous</a> <a href='w8 任務.html'>Next</a> >> w8 任務<br /><h1>w7_summary</h1>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="./../downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="./../downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
 <p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p>
 <h4>請各大組在摘要網誌中回答下列問題:</h4>
 <ol>
@@ -173,7 +175,7 @@ c.recursiveImport(
     theTypes =  ['.py']
 )</pre>
 <h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a></p>
 <p></p><br />w7 任務 << <a href='w7 任務.html'>Previous</a> <a href='w8 任務.html'>Next</a> >> w8 任務</div>
         
     <!-- footer -->
